Correction of author handling in algorithms

--- a/EnCAB/templates/algorithm.html
+++ b/EnCAB/templates/algorithm.html
@@ -10,8 +10,8 @@
 <div class="data">
 {%- for b, filename in blocks_data %}
 {% if b.findtext(sort) and b.findtext(sort) and loop.changed(b.findtext(sort).lower()) %}<a name="{{ b.findtext(sort).lower() }}"></a>{% endif %}
-<a name="{{ b.findtext('reference','') }}"></a>
-<b>{{ b.findtext('reference','')|replace('_','&nbsp;') }}</b>
+<a name="{{ filename.rsplit('.',1)[0] }}"></a>
+<b>{{ filename.rsplit('.',1)[0].replace('_','&nbsp;') }}</b>
 <table class="data">
     <tr>
         <td class="col-1 Alg-Statement">Alg Statement:</td><td class="col-2 Alg-Statement-input">{{ b.findtext('algdata/algorithm_statement','') }}</td>
@@ -48,12 +48,12 @@
     <tr>
         <td>Source info:</td><td>
             {%- for source in b.findall('biblioref/source')[:1] %}
-            <a href="../bibliography/bibliography.html#{{source.findtext('abbrev','').rsplit('_',1)[0]}}">{{source.findtext('abbrev','')|replace('_',' ')}}</a>{%- if source.findtext('pagenums') %}, p. {{source.findtext('pagenums')}}{% endif %}
+            <a href="../bibliography/bibliography.html#{{source.findtext('abbrev','')|remove_year}}">{{source.findtext('abbrev','')|replace('_',' ')}}</a>{%- if source.findtext('pagenums') %}, p. {{source.findtext('pagenums')}}{% endif %}
             {%- endfor %}
         </td>
         <td>Also cited in:</td><td>
             {%- for cited in b.findall('biblioref/cited') %}
-            <a href="../bibliography/bibliography.html#{{cited.findtext('abbrev','').rsplit('_',1)[0]}}">{{cited.findtext('abbrev','')|replace('_',' ')}}</a>{%- if cited.findtext('pagenums') %}, p. {{cited.findtext('pagenums')}}{% endif %}{% if not loop.last %}; {% endif %}
+            <a href="../bibliography/bibliography.html#{{cited.findtext('abbrev','')|remove_year}}">{{cited.findtext('abbrev','')|replace('_',' ')}}</a>{%- if cited.findtext('pagenums') %}, p. {{cited.findtext('pagenums')}}{% endif %}{% if not loop.last %}; {% endif %}
             {%- endfor %}
         </td>
     </tr>
@@ -76,18 +76,21 @@
         <td>Notes on bibliography:</td><td colspan="3">{{ b.findtext('algnotes/biblio_notes','') }}</td>
     </tr>
     <tr>
-        <td>How to cite:</td><td>EnCAB alg. - {{ b.findtext('reference','') }}</td>
+        <td>How to cite (<a href="../cite/cite.html">guidelines</a>):</td><td>{%- if b.find('algauthors/creation') %}
+            {%- for author in b.find('algauthors/creation') %}
+            {{author.findtext('surname','')}} {{author.findtext('firstname','')}}{%- if author.findtext('date') %} {{author.findtext('date').rsplit('.',1)[-1]}}{% endif %}{% if not loop.last %}, {% endif %}
+            {%- endfor %}, {% endif %}alg. {{ filename.rsplit('.',1)[0] }}</td>
         <td>Created by/on:</td><td>{%- if b.find('algauthors/creation') %}
             {%- for author in b.find('algauthors/creation') %}
-            <a href="../authors/{{author.findtext('surname','').strip('.,')|replace(' ','')}}{{author.findtext('firstname','').strip('.,')|replace(' ','')}}.html">{{author.findtext('surname','')}} {{author.findtext('firstname','')}}</a>{%- if author.findtext('date') %} ({{ author.findtext('date') }}){% endif %}{% if not loop.last %}, {% endif %}
+            <a href="../authors/{{author.findtext('surname','').strip('.,')|replace(' ','')}}{{author.findtext('firstname','').strip('.,')|replace(' ','')}}.html">{{author.findtext('surname','')}} {{author.findtext('firstname','')}}</a>{%- if author.findtext('date') %} ({{author.findtext('date')}}){% endif %}{% if not loop.last %}, {% endif %}
             {%- endfor %}
         {% endif %}</td>
     </tr>
     <tr>
-        <td>Input data:</td><td><a href="../algorithms_data/{{filename}}">{{filename}}</a></td>
+        <td>Input data:</td><td><a href="../algorithms_data/{{filename}}" onclick="window.open('../algorithms_data/{{filename}}', '_blank','width=800,height=600'); return false;">{{filename}}</a></td>
         <td>Modified by/on:</td><td>{%- if b.find('algauthors/modification') %}
             {%- for author in b.find('algauthors/modification') %}
-            <a href="../authors/{{author.findtext('surname','').strip('.,')|replace(' ','')}}{{author.findtext('firstname','').strip('.,')|replace(' ','')}}.html">{{author.findtext('surname','')}} {{author.findtext('firstname','')}}</a>{%- if author.findtext('date') %} ({{ author.findtext('date') }}){% endif %}{% if not loop.last %}, {% endif %}
+            <a href="../authors/{{author.findtext('surname','').strip('.,')|replace(' ','')}}{{author.findtext('firstname','').strip('.,')|replace(' ','')}}.html">{{author.findtext('surname','')}} {{author.findtext('firstname','')}}</a>{%- if author.findtext('date') %} ({{author.findtext('date')}}){% endif %}{% if not loop.last %}, {% endif %}
             {%- endfor %}
         {% endif %}</td>
     </tr>
