--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,7 @@
 /*
  * style.css for EnCAB
- *
+ * old background color: LightBlue: #add8e6 rgb(173, 216, 230) 
+ * new background color: #7498A8 rgb (116, 152, 168)
  */
 
 
@@ -12,7 +13,7 @@ html {
 
 
 body {
-    background-color: #add8e6; /* LightBlue: #add8e6 rgb(173, 216, 230) */
+    background-color: #7498A8;
     margin: 20px 0;
     padding: 0 10px;
     font-family: "Verdana", Verdana, sans-serif;
